--- a/assets/css/templatemo-softy-pinko.css
+++ b/assets/css/templatemo-softy-pinko.css
@@ -27,7 +27,8 @@ Table of contents
 font & reset css
 --------------------------------------------- 
 */
-@import url("https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
 :root {
   --padding-container: 75px 0;
   --color-title: #001A49;
@@ -105,7 +106,7 @@ header, nav, section, article, aside, footer, hgroup {
 }
 
 html, body {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Poppins', sans-serif!important;
   font-weight: 400;
   background-color: #fff;
   font-size: 16px;
@@ -488,25 +489,7 @@ header
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
   margin-left: 30px;
-}
-.nav {
-  --padding-container: 0;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  height: 10rem;
-}
-.nav__img {
-  display: block;
-  width: 30px;
-}
-
-
-.nav__close {
-  display: var(--show, none);
+  
 }
 
 
@@ -538,7 +521,9 @@ header
 .header-area .main-nav .nav li:last-child {
   padding-right: 0px;
 }
-
+.header-area.header-sticky {
+  min-height: 80px;
+}
 .header-area .main-nav .nav li a {
   display: block;
   font-weight: 500;
@@ -655,7 +640,7 @@ header
 }
 
 .header-area.header-sticky .logo {
-  margin-top: -40px;
+  margin-top: 20px;
 }
 
 .header-area.header-sticky .nav {
@@ -690,13 +675,20 @@ header
   .header-area .container {
     padding: 0px;
   }
+  .header-area .main-nav .logo img{
+    margin-top: -10px
+  }
+
   .header-area .logo {
-    
+    margin-top: 27px !important;
+    margin-left: 30px;
   }
   .header-area .menu-trigger {
     display: block !important;
   }
-  
+  .header-area .main-nav {
+    overflow: hidden;
+  }
   .header-area .main-nav .nav {
     float: none;
     width: 100%;
@@ -971,6 +963,61 @@ features
     margin-top: 0px;
   }
 }
+
+
+@media (max-width:761px) {
+  .img-fluid {
+    max-width:50%;
+    height: auto
+}
+.about__main {
+  gap: 2em;
+}
+}
+/* About */
+.about__title{
+  font-size: 24px;
+}
+.about {
+  text-align: center;
+}
+
+.subtitle {
+  color: var(--color-secundario);
+
+  margin-bottom: 25px;
+}
+
+
+.about__paragraph {
+  line-height: 1.7;
+}
+
+.about__main {
+  padding-top: 80px;
+  display: grid;
+  width: 90%;
+  margin: 0 auto;
+  gap: 1em;
+  overflow: hidden;
+  grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+
+.about__icons {
+  display: grid;
+  gap: 1em;
+  justify-items: center;
+  width: 250px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.about__icon {
+  width: 100px;
+}
+
+
 
 /* 
 ---------------------------------------------
@@ -1525,7 +1572,77 @@ blog
   text-align: left;
 }
 
+/* Questions */
 
+.questions {
+  text-align: center;
+}
+
+.questions__container {
+  display: grid;
+  gap: 2em;
+  padding-top: 50px;
+  padding-bottom: 100px;
+}
+
+.questions__padding {
+  padding: 0;
+  transition: padding .3s;
+  border: 1px solid var(--color-cuarto);
+  border-radius: 6px;
+}
+
+.questions__padding--add {
+  padding-bottom: 30px;
+}
+
+.questions__answer {
+  padding: 0 30px 0;
+  overflow: hidden;
+}
+
+.questions__title {
+  text-align: left;
+  display: flex;
+  font-size: 20px;
+  padding: 30px 0 30px;
+  cursor: pointer;
+  color: var(--color-secundario);
+  justify-content: space-between;
+}
+
+.questions__arrow {
+  border-radius: 50%;
+  background-color: var(--color-title);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: flex-end;
+  margin-left: 10px;
+  transition: transform .3s;
+}
+
+.questions__arrow--rotate {
+  transform: rotate(180deg);
+}
+
+.questions__show {
+  text-align: left;
+  height: 0;
+  transition: height .3s;
+}
+
+.questions__img {
+  display: block;
+}
+
+.questions__copy {
+  width: 60%;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
 /* 
 ---------------------------------------------
 contact
